ml-models-kserve-configs/text-embedding/text-embedding-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: text-embedding-gateway
  namespace: dev
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - text-embedding.dev.curieo.org
    port:
      name: http
      number: 80
      protocol: HTTP
