ml-models-kserve-configs/text-embedding/text-embedding-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: text-embedding-virtualservice
  namespace: dev
spec:
  gateways:
  - text-embedding-gateway
  hosts:
  - text-embedding.dev.curieo.org
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
        port:
          number: 80
